...
    @JavascriptInterface
    fun updateArticleOutline(json: String) {
        onArticleOutlineChanged(json)
    }

    companion object {
        const val INTERFACE_NAME = "Android"
        private const val MAX_COPY_TEXT_LENGTH = 20_000
    }
}

